--- a/pages/index.css
+++ b/pages/index.css
@@ -2,11 +2,20 @@
 @import url("../vendor/normalize.css");
 @import url("../pages/profile/profile.css");
 @import url("../pages/mesto/mesto.css");
+@import url("../pages/popup/popup.css");
 
 .body {
   background-color: black;
   max-width: 100%;
   margin: 0;
+}
+
+@media screen and (min-width: 1280px) {
+  .body {
+    display: flex;
+    flex-direction: column;
+
+  }
 }
 
 .page {
@@ -16,10 +25,31 @@
  border-bottom: solid 1px #545454;
 }
 
+@media screen and (min-width: 1280px) {
+  .page {
+    width: 880px;
+    margin: 0 auto;
+    padding-left: 0;
+    padding-top: 45px;
+    padding-bottom: 45px;
+  }
+}
+
+.header__logo {
+  max-width: 32.41875vw;
+}
+
 .main {
   padding-top: 42px;
   max-width: 88.125vw;
   margin: 0 auto 0 auto;
+}
+
+@media screen and (min-width: 1280px) {
+  .main {
+    max-width: 880px;
+    padding-top: 36.25px;
+  }
 }
 
 .footer {
@@ -28,13 +58,28 @@
   padding-left: 5.9375vw;
 }
 
+@media screen and (min-width: 1280px) {
+  .footer {
+    padding-top: 67px;
+    padding-left: 0;
+    width: 880px;
+    margin: 0 auto;
+  }
+}
+
 
 .footer__text {
-  font-family: "Inter";
-  font-style: "Regular";
+  font-family: "Inter", sans-serif;
+  font-style: Regular;
   font-size: 14px;
   line-height: 17px;
-  line-height: 100%;
   color: #545454;
   margin: 0;
+}
+
+@media screen and (min-width: 1280px) {
+  .footer__text {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
