--- a/pages/mesto/mesto.css
+++ b/pages/mesto/mesto.css
@@ -5,8 +5,16 @@
   justify-content: center;
 }
 
+@media screen and (min-width: 1280px) {
+  .mesto {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    row-gap: 17px;
+  }
+}
+
 .mesto__title {
-  font-family: "Inter";
+  font-family: "Inter", sans-serif;
   font-style: Black;
   font-size: 24px;
   line-height: 29px;
@@ -29,7 +37,15 @@
   padding-bottom: 31px;
 }
 
+
 .mesto__img {
+  border-radius: 5% 5% 0 0;
   width: 100%;
   object-fit: contain;
+}
+
+@media screen and (min-width: 1280px) {
+  .mesto__img {
+    width: 282px;
+  }
 }
