--- a/pages/profile/profile.css
+++ b/pages/profile/profile.css
@@ -4,11 +4,36 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 36px;
+  gap: 36px;
+}
+
+@media screen and (min-width: 1280px) {
+  .profile {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 47.25px;
+  }
+}
+
+.info {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 22.25px;
+}
+
+@media screen and (min-width: 1280px) {
+  .info {
+    flex-direction: row;
+    gap: 30px;
+  }
 }
 
 .profile__avatar {
   border-radius: 100%;
-  max-width: 37.5vw;
+  width: 120px;
   object-fit: contain;
 }
 
@@ -17,15 +42,21 @@
   row-gap: 14px;
   column-gap: 10px;
   grid-template-columns: 59.0625vw, 5.625vw;
-  padding-bottom: 36px;
   grid-template:
     "a b"
     "c c";
 }
 
+@media screen and (min-width: 1280px) {
+  .profile__info {
+    row-gap: 16px;
+    column-gap: 18px;
+  }
+}
+
 .profile__title {
-  font-family: "Inter";
-  font-style: "Medium";
+  font-family: "Inter", sans-serif;
+  font-style: Medium;
   font-size: 27px;
   line-height: 33px;
   text-align: center;
@@ -33,16 +64,38 @@
   grid-area: a;
 }
 
+@media screen and (min-width: 1280px) {
+  .profile__title {
+    font-size: 42px;
+    line-height: 48px;
+    text-align: left;
+  }
+}
 
-.profile__pencil {
-  grid-area: b;
+.profile__button {
+  max-width: 18px;
+  background-color: black;
   border: 1px solid white;
+  grid-area: b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
 
+.button__pencil {
+  width: 7.5px;
+}
+
+@media screen and (min-width: 1280px) {
+  .button__pencil {
+    width: 24px;
+  }
 }
 
 .profile__subtitle {
-  font-family: "Inter";
-  font-style: "Regular";
+  font-family: "Inter", sans-serif;
+  font-style: Regular;
   font-size: 14px;
   line-height: 17px;
   text-align: center;
@@ -50,7 +103,16 @@
   grid-area: c;
 }
 
+@media screen and (min-width: 1280px) {
+  .profile__subtitle {
+    text-align: left;
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
 .button {
+  background-color: black;
   width: 100%;
   border: 2px solid white;
   display: flex;
@@ -60,7 +122,19 @@
   grid-area: b;
 }
 
+@media screen and (min-width: 1280px) {
+  .button {
+    width: 150px;
+  }
+}
+
 .profile__plus {
   max-width: 5.8%;
   object-fit: contain;
+}
+
+@media screen and (min-width: 1280px) {
+  .profile__plus {
+    max-width: 22px;
+  }
 }
