fix: ошибки валидатора

--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -3,8 +3,8 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 16.94px;
-  align-items: Center;
-  max-width: 74.375vw ;
+  align-items: center;
+  max-width: 74.375vw;
   margin-top: 15px;
   margin-bottom: 25px;
   background-color: black;
