--- a/blocks/profile/__pencil/profile__pencil.css
+++ b/blocks/profile/__pencil/profile__pencil.css
@@ -1,11 +1,11 @@
-.button__pencil {
+.profile__pencil {
   width: 7.5px;
   height: 7.5px;
 
 }
 
 @media screen and (min-width: 1280px) {
-  .button__pencil {
+  .profile__pencil {
     width: 24px;
   }
 }
