--- a/blocks/mesto/__element/mesto__element.css
+++ b/blocks/mesto/__element/mesto__element.css
@@ -1,5 +1,5 @@
 .mesto__element {
-  border-radius: 5%;
+  border-radius: 10px;
   background-color: white;
   display: flex;
   flex-direction: column;
