--- a/blocks/mesto/__img/mesto__img.css
+++ b/blocks/mesto/__img/mesto__img.css
@@ -1,7 +1,7 @@
 .mesto__img {
-  border-radius: 5% 5% 0 0;
+  border-radius: 10px 10px 0 0;
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 @media screen and (min-width: 1280px) {
