--- a/blocks/mesto/__title/mesto__title.css
+++ b/blocks/mesto/__title/mesto__title.css
@@ -1,4 +1,7 @@
 .mesto__title {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 900;
   font-size: 24px;
