--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,4 +1,7 @@
 .profile__title {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 27px;
