--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -11,5 +11,8 @@
 
 .popup.active {
   display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
   transition: 0.5s all;
 }
