--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,4 +1,5 @@
 .profile__title {
+  max-width: 238px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -14,6 +15,7 @@
 
 @media screen and (min-width: 1280px) {
   .profile__title {
+    max-width: 358px;
     font-size: 42px;
     line-height: 48px;
     text-align: left;
