--- a/blocks/mesto/__img/mesto__img.css
+++ b/blocks/mesto/__img/mesto__img.css
@@ -1,11 +1,13 @@
 .mesto__img {
   border-radius: 10px 10px 0 0;
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
 @media screen and (min-width: 1280px) {
   .mesto__img {
     width: 282px;
+    height: 282px;
   }
 }
