--- a/blocks/mesto/__like/mesto__like.css
+++ b/blocks/mesto/__like/mesto__like.css
@@ -14,6 +14,14 @@
   opacity: 50%;
 }
 
-.mesto__like:active {
+.mesto__like-active {
+  cursor: pointer;
+  width: 22px;
+  height: 19px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border: none;
+  margin-left: auto;
   background: url("../../../images/color-black.png");
 }
