--- a/blocks/mesto/__ul/mesto__ul.css
+++ b/blocks/mesto/__ul/mesto__ul.css
@@ -21,3 +21,21 @@
     grid-template-columns: repeat(3, auto);
   }
 }
+
+.mesto__delete {
+  position: absolute;
+  background: url('../../../images/basket.png');
+  cursor: pointer;
+  width: 18px;
+  height: 19px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border: none;
+  top: 20px;
+  right: 20px;
+}
+
+.mesto__delete:hover {
+  opacity: 50%;
+}
