--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,5 @@
 .popup__container {
-  position: relative;
+  position: absolute;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -7,6 +7,7 @@
   width: 88.125vw;
   padding-top: 25px;
   border-radius: 10px;
+  display: none;
 }
 
 @media screen and (min-width: 1280px) {
