--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,10 +1,11 @@
 .popup__container {
   position: absolute;
   background-color: white;
-  display: flex;
   flex-direction: column;
   align-items: center;
-  width: 88.125vw;
+  width: 74.375vw;
+  padding-left: 11.25px;
+  padding-right: 11.25px;
   padding-top: 25px;
   border-radius: 10px;
   display: none;
@@ -12,7 +13,9 @@
 
 @media screen and (min-width: 1280px) {
   .popup__container {
-    width: 430px;
+    width: 358px;
     padding-top: 34px;
+    padding-left: 36px;
+    padding-right: 36px;
   }
 }
