--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -6,7 +6,7 @@
   line-height: 16.94px;
   padding-bottom: 13px;
   border-style: none;
-  width: calc(100% - 44px);
+  width: 100%;
   margin-bottom: 30px;
   border-bottom: solid 1px rgba(0, 0, 0, .2);
 }
