--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,9 @@
 @import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__text/popup__text.css");
 @import url("../blocks/popup/__title/popup__title.css");
+@import url("../blocks/popup/__picture/popup__picture.css");
+@import url("../blocks/popup/__screen/popup__screen.css");
+@import url("../blocks/picture/__name/picture__name.css");
 
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__avatar/profile__avatar.css");
@@ -39,6 +42,7 @@
 @import url("../blocks/profile/__subtitle/profile__subtitle.css");
 @import url("../blocks/profile/__title/profile__title.css");
 @import url("../blocks/profile/__pencil/profile__pencil.css");
+
 
 @import url("../blocks/reaction/reaction.css");
 
