--- a/pages/index.css
+++ b/pages/index.css
@@ -19,6 +19,7 @@
 @import url("../blocks/mesto/__like/mesto__like.css");
 @import url("../blocks/mesto/__title/mesto__title.css");
 @import url("../blocks/mesto/__ul/mesto__ul.css");
+@import url("../blocks/mesto/__delete/mesto__delete.css");
 
 @import url("../blocks/page/page.css");
 
