Создание удаление и лайк карточек

--- a/blocks/popup/__picture/popup__picture.css
+++ b/blocks/popup/__picture/popup__picture.css
@@ -1,7 +1,7 @@
 .popup__picture {
   position: absolute;
   background-color: white;
-  display: none;
+  display: flex;
   flex-direction: column;
   background: none;
   gap: 10px;
