--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -11,7 +11,7 @@
   transition: visibility 0.5s, opacity 0.5s linear;
 }
 
-.popup.active {
+.popup_opened {
   align-content: center;
   justify-content: center;
   align-items: center;
