--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -8,7 +8,7 @@
   padding-right: 11.25px;
   padding-top: 25px;
   border-radius: 10px;
-  display: none;
+  display: flex;
 }
 
 @media screen and (min-width: 1280px) {
