--- a/pages/index.css
+++ b/pages/index.css
@@ -44,6 +44,8 @@
 @import url("../blocks/profile/__pencil/profile__pencil.css");
 @import url("../blocks/popup/__contcard/popup__contcard.css");
 
+@import url("../blocks/form/input-error/form__input-error.css");
+
 @import url("../blocks/body/body.css");
 
 @import url("../blocks/reaction/reaction.css");
