--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -29,3 +29,9 @@
 .popup__button:hover {
   opacity: 80%;
 }
+
+.popup__button_inactive {
+  background-color: white;
+  color: #E5E5E5;
+  border: 2px solid #E5E5E5;
+}
