--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -7,7 +7,8 @@
   padding-bottom: 13px;
   border-style: none;
   width: 100%;
-  margin-bottom: 5px;
+  margin-bottom: 30px;
+
   border-bottom: solid 1px rgba(0, 0, 0, .2);
 }
 
@@ -16,4 +17,8 @@
     font-size: 14px;
     width: 358px;
   }
+}
+
+.popup__text-type-error {
+  margin-bottom: 5px;
 }
