--- a/blocks/popup/__input/popup__input-error.css
+++ b/blocks/popup/__input/popup__input-error.css
@@ -1,4 +1,4 @@
-.form__input-error {
+.popup__input-error {
   color: red;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
@@ -8,6 +8,6 @@
   display: none;
 }
 
-.form__input-error_active {
+.popup__input-error_active {
   display: flex;
 }
