--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -21,7 +21,7 @@
     line-height: 21.78px;
     width: 358px;
     height: 50px;
-    margin-top: 14px;
+    /* margin-top: 14px; */
     margin-bottom: 18px;
   }
 }
