--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -11,6 +11,7 @@
   .popup__title {
     font-size: 24px;
     line-height: 29.05px;
-    margin-bottom: 54px;
+    /* margin-bottom: 54px; */
+    margin-bottom: 38px;
   }
 }
