--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,12 @@
 .profile__avatar {
   border-radius: 100%;
   width: 120px;
+  height: 120px;
   object-fit: cover;
+}
+
+.profile__avatar:hover {
+  color: rgba(0, 0, 0, 0.5);
+  background-image: url('../../../images/pencil.svg');
+  background-size: 26px 26px;
 }
