--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,4 +1,5 @@
 .profile__avatar {
+  z-index:0;
   border-radius: 100%;
   width: 120px;
   height: 120px;
@@ -6,7 +7,5 @@
 }
 
 .profile__avatar:hover {
-  color: rgba(0, 0, 0, 0.5);
-  background-image: url('../../../images/pencil.svg');
-  background-size: 26px 26px;
+  background-color: rgba(0, 0, 0, 0.8);
 }
