--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -36,6 +36,8 @@
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__avatar/profile__avatar.css");
 @import url("../blocks/profile/__button/profile__button.css");
+@import url("../blocks/profile/__changeavatar/profile__changeavatar.css");
+@import url("../blocks/profile/__buttonpict/profile__buttonpict.css");
 @import url("../blocks/profile/__info/profile__info.css");
 @import url("../blocks/profile/__plus/profile__plus.css");
 @import url("../blocks/profile/__subtitle/profile__subtitle.css");
@@ -43,6 +45,7 @@
 @import url("../blocks/profile/__pencil/profile__pencil.css");
 @import url("../blocks/popup/__contcard/popup__contcard.css");
 @import url("../blocks/popup/__input/popup__input-error.css");
+
 
 @import url("../blocks/body/body.css");
 
