--- a/src/blocks/reaction/reaction.css
+++ b/src/blocks/reaction/reaction.css
@@ -5,13 +5,14 @@
   padding-bottom: 31px;
   align-items: center;
   margin-left: 21px;
-  margin-right: 15px;
+  margin-right: 20px;
+  justify-content: space-between
 }
 
 @media screen and (min-width: 1280px) {
   .reaction {
     margin-left: 21px;
-    margin-right: 15px;
+    margin-right: 20px;
   }
 
 }
