--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -46,6 +46,8 @@
 @import url("../blocks/popup/__contcard/popup__contcard.css");
 @import url("../blocks/popup/__input/popup__input-error.css");
 
+@import url("../blocks/like/like.css");
+@import url("../blocks/like/__score/like__score.css");
 
 @import url("../blocks/body/body.css");
 
