--- a/src/blocks/reaction/reaction.css
+++ b/src/blocks/reaction/reaction.css
@@ -6,7 +6,7 @@
   align-items: center;
   margin-left: 21px;
   margin-right: 20px;
-  justify-content: space-between
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 1280px) {
