--- a/main.css
+++ b/main.css
@@ -16,18 +16,20 @@
 .page{margin:0;max-width:100%}@media screen and (min-width:1280px){.page{display:flex;flex-direction:column}}
 .popup{align-content:center;align-items:center;background:rgba(0,0,0,.5);display:flex;height:100vh;justify-content:center;left:0;opacity:0;position:fixed;top:0;visibility:hidden;width:100%}.popup_opened{cursor:pointer;opacity:1;transition:visibility .5s,opacity .5s linear;visibility:visible}
 .popup__img{-o-object-fit:cover;object-fit:cover;width:100%}
-.popup__button{align-items:center;align-self:center;background-color:#000;border:none;color:#fff;font-family:Inter,Arial,sans-serif;font-size:14px;font-weight:400;height:46px;line-height:16.94px;margin-bottom:25px;margin-top:15px;max-width:74.375vw;width:74.375vw}@media screen and (min-width:1280px){.popup__button{font-size:18px;height:50px;line-height:21.78px;margin-bottom:18px;margin-top:14px;width:358px}}.popup__button:hover{opacity:80%}.popup__button_inactive{background-color:#fff;border:2px solid #e5e5e5;color:#e5e5e5}
+.popup__button{align-items:center;align-self:center;background-color:#000;border:none;color:#fff;font-family:Inter,Arial,sans-serif;font-size:14px;font-weight:400;height:46px;line-height:16.94px;margin-bottom:25px;margin-top:15px;max-width:74.375vw;width:74.375vw}@media screen and (min-width:1280px){.popup__button{font-size:18px;height:50px;line-height:21.78px;margin-bottom:18px;width:358px}}.popup__button:hover{opacity:80%}.popup__button_inactive{background-color:#fff;border:2px solid #e5e5e5;color:#e5e5e5}
 .popup__close{background-color:transparent;border:none;cursor:pointer;max-width:6.25vw;padding:0;position:absolute;right:0;top:-32px}@media screen and (min-width:1280px){.popup__close{max-width:32px;right:-40px;top:-40px;width:32px}}.popup__close:hover{opacity:60%}
 .popup__container{align-items:center;background-color:#fff;border-radius:10px;display:flex;flex-direction:column;padding-left:11.25px;padding-right:11.25px;padding-top:25px;position:absolute;width:74.375vw}@media screen and (min-width:1280px){.popup__container{padding-left:36px;padding-right:36px;padding-top:34px;width:358px}}
 .popup__form{align-items:flex-start;display:flex;flex-direction:column;width:100%}
 .popup__text{border-style:none;border-bottom:1px solid rgba(0,0,0,.2);color:#000;font-family:Inter,Arial,sans-serif;font-size:14px;font-weight:400;line-height:16.94px;margin-bottom:5px;padding-bottom:13px;width:100%}@media screen and (min-width:1280px){.popup__text{font-size:14px;width:358px}}
-.popup__title{font-family:Inter,Arial,sans-serif;font-size:18px;font-weight:900;line-height:21.78px;margin-bottom:75px;margin-top:0}@media screen and (min-width:1280px){.popup__title{font-size:24px;line-height:29.05px;margin-bottom:54px}}
+.popup__title{font-family:Inter,Arial,sans-serif;font-size:18px;font-weight:900;line-height:21.78px;margin-bottom:75px;margin-top:0}@media screen and (min-width:1280px){.popup__title{font-size:24px;line-height:29.05px;margin-bottom:38px}}
 .popup__picture{background-color:#fff;background:none;display:flex;flex-direction:column;gap:10px;position:absolute}
 .popup__screen{max-height:75vh;max-width:75vw;-o-object-fit:cover;object-fit:cover}
 .popup__subname{background:none;color:#fff;font-family:Inter,Arial,sans-serif;font-size:12px;font-weight:400;line-height:15px}
 .profile{align-items:center;color:#fff;display:flex;flex-direction:column;gap:34px;padding-bottom:36px}@media screen and (min-width:1280px){.profile{display:flex;flex-direction:row;justify-content:space-between;padding-bottom:47.25px}}
-.profile__avatar{border-radius:100%;-o-object-fit:cover;object-fit:cover;width:120px}
+.profile__avatar{border-radius:100%;height:120px;-o-object-fit:cover;object-fit:cover;width:120px;z-index:0}.profile__avatar:hover{background-color:rgba(0,0,0,.8)}
 .profile__button{align-items:center;align-self:center;background-color:#000;border:1px solid #fff;cursor:pointer;display:flex;grid-area:b;height:18px;justify-content:center;max-width:18px;padding:0}@media screen and (min-width:1280px){.profile__button{height:24px;max-width:24px}}.profile__button:hover{opacity:60%}
+.profile__changeavatar{border-radius:100%;display:flex;height:120px;justify-content:center;margin:0;padding:0;position:absolute;width:120px;z-index:2}.profile__changeavatar:hover{background-color:rgba(0,0,0,.8);background-image:url(ff0fcb318a3974db48d1.svg);background-position:50%;background-repeat:no-repeat;background-size:26px 26px;cursor:pointer}
+.profile__buttonpict{border:0;border-radius:100%;color:#000;height:120px;margin:0;-o-object-fit:cover;object-fit:cover;padding:0;width:120px}
 .profile__info{-moz-column-gap:10px;column-gap:10px;display:grid;grid-template-areas:"a b" "c c";grid-template-columns:repeat(2,auto);row-gap:7px;width:100%}@media screen and (min-width:1280px){.profile__info{-moz-column-gap:18px;column-gap:18px;row-gap:16px;width:auto}}
 .profile__plus{max-width:5.8%;min-width:16px;-o-object-fit:contain;object-fit:contain}@media screen and (min-width:1280px){.profile__plus{max-width:22px}}
 .profile__subtitle{font-family:Inter,Arial,sans-serif;font-size:14px;font-weight:400;grid-area:c;line-height:16.94px;margin-left:auto;margin-right:auto;max-width:282px;overflow:hidden;text-align:center;text-overflow:ellipsis;white-space:nowrap}@media screen and (min-width:1280px){.profile__subtitle{font-size:18px;line-height:21.78px;margin:0;max-width:336px;text-align:left}}
@@ -35,8 +37,10 @@
 .profile__pencil{height:7.5px;width:7.5px}@media screen and (min-width:1280px){.profile__pencil{width:24px}}
 .popup__contcard{align-items:flex-start}
 .popup__input-error{color:red;display:block;font-family:Inter,Arial,sans-serif;font-size:12px;font-weight:400;line-height:14.52px;margin-bottom:13px;min-height:30px}.popup__input-error_active{display:block}
+.like{align-items:center;display:flex;flex-direction:column;gap:3px}
+.like__score{font-family:Inter,Arial,sans-serif;font-size:13px;font-weight:400;line-height:15.73px;margin:0}
 .body{background-color:#000}
-.reaction{align-items:center;display:flex;margin:0 15px 0 21px;padding-bottom:31px}@media screen and (min-width:1280px){.reaction{margin-left:21px;margin-right:15px}}
+.reaction{align-items:center;display:flex;justify-content:space-between;margin:0 20px 0 21px;padding-bottom:31px}@media screen and (min-width:1280px){.reaction{margin-left:21px;margin-right:20px}}
 
 
 /*# sourceMappingURL=main.css.map*/
